--- a/index2.css
+++ b/index2.css
@@ -4,7 +4,7 @@
   }   
 
   body{
-    background-image: url('C:/Users/25576/Downloads/1.png');
+    background-image: url('https://github.com/hectlite/hectlite.tk/blob/main/1.png');
     font-family: cursive;
     background-color: grey;
   }
