--- a/animating.css
+++ b/animating.css
@@ -37,7 +37,7 @@ button{
   border-radius: 4px;
   background-color: cyan;
   border: none;
-  color: cyan;
+  color: white;
   text-align: center;
   font-size: 28px;
   padding: 20px;
