--- a/animating.css
+++ b/animating.css
@@ -35,7 +35,7 @@ button{
     display: inline-block;
     float: left;
   border-radius: 4px;
-  background-color: cyan;
+  background-color: green;
   border: none;
   color: white;
   text-align: center;
