--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
+*{
+  margin: 0;
+  padding: 0; 
 
+}
 
    @keyframes change{
   		20%{background-image: url('https://wallpapercave.com/wp/wp2886902.jpg');
@@ -33,9 +37,7 @@
 }
   body{
     animation: change 10s infinite;
-     margin:0;
-  padding:0;
-
+   
   } 
 
 
@@ -106,7 +108,7 @@ input[type=text]:focus {
 }
 
  .slideshow-container {
-  max-width: 1000px;
+  width: 800px;
   position: relative;
   margin: auto;
 }
@@ -190,30 +192,136 @@ input[type=text]:focus {
   to {opacity: 1}
 }
 
-h3{
-	color: white;
-	font-size: 30px;
+.body-content{
+  width: 100%;
+  padding: 20px;
+  text-align: justify;
+  box-sizing: border-box;
+  font-size: 18px;
+  line-height: 40px;
+
 }
-p{
-	color: white;
+ .footer{
+  width: 1400px;
+  background: #00121b;
+  display: block;
+  box-shadow: 0 0 10px orange, 0 0 40px orange, 0 0 10px orange;
+ object-position: center;
+ }
+  .inner-footer{
+    width: 95%;
+    margin: auto;
+    padding: 30px 10px;
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    justify-content: center;
+  }
+  .footer-items{
+    width: 25%;
+    padding: 10px 20px;
+    box-sizing: border-box;
+  }
+  h3{
+    padding: 10px 0;
+    font-size: 25px;
+    color: #fff;
+    text-transform: uppercase;
+
+  }
+  .footer-items p{
+    color: grey;
+    font-size: 16px;
+    text-align: justify;
+    line-height: 25px;
+
+  }
+  h4{
+    margin: 10px 0px;
+     color: grey;
+     font-size: 16px;
+     font-weight: lighter;
+     text-transform: uppercase;
+
+
+  }
+  .border{
+    height: 2px;
+    width: 40px;
+    background: #ff9800;
+
+  }
+  ul{
+    list-style: none;
+    color: #fff;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+  }
+ul a{
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  transition:0.3s;
+
+}
+ul a:hover{
+  color: #ff9800;
+
+}
+ul li {
+  margin: 10px 0;
+  height: 25px;
+
+}
+li i {
+  margin-right: 20px;
+}
+.social-media{
+  width: 100%;
+  color: green;
+  text-align: center;
+
+}
+.social-media a {
+  text-decoration: none;
+
+}
+.social-media i {
+  height: 15px;
+  width: 15px;
+  margin: 20px 5px;
+  padding: 10px;
+  color: green;
+  border-radius: 50%;
+  border: 1px solid grey;
+  transition: 0.3s;
+
 }
 
-h4{
-	color: cyan;
-	alig
-}
-ul{
-	display: inline; 
-}
-ul li a{
-	color: red;
-	align-content: center;
-	display: inline;
-}
-h5{
-	color: magenta;
+.social-media i:hover{
+  background: grey;
+
 }
 
-i{
-  color: white;
+.footer-bottom{
+  padding: 10px;
+  background: #3d545f;
+  color: #fff;
+  font-size: 12px;
+ 
 }
+
+.content {
+  position: relative;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 80%;
+  height:10%;
+}
+ 
+hr.rounded {
+  border-top: 8px solid orange;
+  border-radius: 10px;
+
+
